# server/api/swagger/swagger.yaml
@@ -262,6 +262,18 @@ paths:
         description: ""
         required: true
         type: "string"
+      - name: "startAt"
+        in: "query"
+        description: ""
+        required: true
+        type: "string"
+        format: "date-time"
+      - name: "endAt"
+        in: "query"
+        description: ""
+        required: true
+        type: "string"
+        format: "date-time"
       responses:
         200:
           description: "OK"
